err/kwiklib.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/kwiklib'...
Listing './lib/python3.5/site-packages/kwiklib/dataio'...
Compiling './lib/python3.5/site-packages/kwiklib/dataio/experiment.py'...
***   File "./lib/python3.5/site-packages/kwiklib/dataio/experiment.py", line 167
    l = sorted(l, key=lambda (x,y): x)
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/kwiklib/dataio/kwik.py'...
***   File "./lib/python3.5/site-packages/kwiklib/dataio/kwik.py", line 642
    print "\nERROR: Could not add clustering in group \"{0:s}\": wrong number of spikes".format(name)
                                                                                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/kwiklib/dataio/tests'...
Compiling './lib/python3.5/site-packages/kwiklib/dataio/tests/test_kwikloader.py'...
***   File "./lib/python3.5/site-packages/kwiklib/dataio/tests/test_kwikloader.py", line 201
    print cluster_groups
                       ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/kwiklib/scripts'...
Listing './lib/python3.5/site-packages/kwiklib/utils'...
Compiling './lib/python3.5/site-packages/kwiklib/utils/pydict.py'...
***   File "./lib/python3.5/site-packages/kwiklib/utils/pydict.py", line 31
    exec script_contents in {}, namespace
                       ^
SyntaxError: Missing parentheses in call to 'exec'

Listing './lib/python3.5/site-packages/kwiklib/utils/tests'...
Listing './lib/python3.5/site-packages/kwiklib-0.3.7.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
